# rp2040_freertos_console

./: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  README.md  appConsole.c  app_console.h  freeRTOS.c  main.c
console/: argtable3.c  cmd_system.c  console.c  console.h  linenoise.c  linenoise.h  split_argv.c
log/: log.c  log.h  log_internal.h  subdir.mk
